chore: finish user migration - 9